fixed alignment of fold markers

--- a/main.less
+++ b/main.less
@@ -1,5 +1,6 @@
 .cm-thehogfather-codefolding {
     cursor: pointer;
+    margin-right: -8px;
 }
 
 .cm-s-default .cm-thehogfather-codefolding-collapsed {
@@ -13,5 +14,5 @@
 }
 
 .cm-s-default div.CodeMirror-gutter {
-    min-width: 4.0em;
+    min-width: 5.0em;
 }
